--- a/test-springboot/src/main/resources/application.yml
+++ b/test-springboot/src/main/resources/application.yml
@@ -26,9 +26,10 @@ spring:
   datasource:
     name: mydb
     type: com.alibaba.druid.pool.DruidDataSource #alibaba.druid连接池
-    url: jdbc:mysql://10.12.9.161:3306/dccp_dev #mysql地址
-    username: dccp
-    password: dccp321
+    #url: jdbc:mysql://10.12.9.161:3306/dccp_dev #mysql地址 dccp dccp321
+    url: jdbc:mysql://moekosu-1.mysql.rds.aliyuncs.com:3306/test #mysql地址
+    username: root
+    password: Moekosu@123123
     driver-class-name: com.mysql.jdbc.Driver
     tomcat:
       min-idle: 1
