--- a/DouyuCrawler-master/conf.properties
+++ b/DouyuCrawler-master/conf.properties
@@ -1,5 +1,5 @@
 # 是否为Debug模式true, 决定是否显示详细Log
-debug = false
+debug = true
 
 # Database(Mysql) 配置
 # 是否存入数据库
@@ -12,6 +12,9 @@ db.password = password
 
 # 直播房间Url配置，命名规则为 room.url.XXX
 
-#74751
-room.url.zz = http://www.douyutv.com/74751
+# nado
+room.url.zz = https://www.douyu.com/ztCache/WebM/room/2020877 
+#https://www.douyu.com/2020877
 
+#74751
+room.current.id = 2020877
