--- a/springboot-designModel/pom.xml
+++ b/springboot-designModel/pom.xml
@@ -100,6 +100,14 @@
 			<version>2.9.9</version>
 		</dependency>
 
+		<!-- guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 
