--- a/springboot-designModel/pom.xml
+++ b/springboot-designModel/pom.xml
@@ -107,6 +107,13 @@
 			<version>18.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.5</version>
+		</dependency>
+
 
 	</dependencies>
 
