--- a/ownerTomcat/pom.xml
+++ b/ownerTomcat/pom.xml
@@ -86,6 +86,13 @@
 			<version>1.3.8.RELEASE</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+
 
 	</dependencies>
 
