--- a/ownerDouyu/pom.xml
+++ b/ownerDouyu/pom.xml
@@ -78,33 +78,12 @@
 			<version>1.1.5</version>
 		</dependency>
 
-		<!-- Redis缓存数据库 https://mvnrepository.com/artifact/redis.clients/jedis -->
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
-		</dependency>
-
 		<!-- 支撑日志集合jar包 https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j -->
 		<!-- 低版本支撑的log4j，新版本使用log4j2 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j</artifactId>
 			<version>1.3.8.RELEASE</version>
-		</dependency>
-
-		<!-- joda -->
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.9</version>
-		</dependency>
-
-		<!-- guava -->
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
@@ -114,12 +93,13 @@
 			<version>4.5.5</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
 		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.12</artifactId>
-			<version>1.1.0</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.47</version>
 		</dependency>
+
 
 
 	</dependencies>
